# gimp-plugin-ris

./: .gitignore  Makefile  README.md  VERSION
src/: Makefile.am  common_ris.c  common_ris.h  filter_scalers.c  filter_scalers.h  gsample.c  gsample.h  hris.h  libris.h  reduce.c  reduce.h
src/gtk2/: filter_dialog.c  filter_ris.c  filter_scalers.c
src/lib/: common_ris.c  gsample.c  hris.c  reduce.c
